# astron-rpa

./: FAQ.md
docker/: .env.example  docker-compose.yml
docker/volumes/atlas/: schema.hcl
engine/components/astronverse-excel/src/astronverse/excel/core_win/: core_win.py
engine/components/astronverse-word/src/astronverse/word/: core_win.py
engine/servers/astronverse-executor/: pyproject.toml
engine/servers/astronverse-executor/src/astronverse/executor/debug/: debug.py  debug_svc.py
engine/servers/astronverse-executor/src/astronverse/executor/flow/syntax/: ast.py
engine/servers/astronverse-executor/src/astronverse/executor/flow/tpl/: package.tpl
engine/servers/astronverse-picker/: pyproject.toml
engine/servers/astronverse-picker/src/astronverse/picker/: __init__.py
engine/servers/astronverse-picker/src/astronverse/picker/core/: picker_core_win.py
engine/servers/astronverse-picker/src/astronverse/picker/engines/: uia_picker.py  web_picker.py
engine/servers/astronverse-picker/src/astronverse/picker/engines/smart_component/: utils.py  (+1 more)
engine/servers/astronverse-picker/src/astronverse/picker/server/: picker_server.py  ws_server.py
engine/servers/astronverse-picker/src/astronverse/picker/strategy/: auto_strategy.py  manager.py  web_strategy.py
engine/servers/astronverse-picker/src/astronverse/picker/utils/: browser.py
engine/servers/astronverse-scheduler/: pyproject.toml
engine/shared/astronverse-workflowlib/: pyproject.toml
engine/shared/astronverse-workflowlib/src/astronverse/workflowlib/: helper.py  storage.py
frontend/locales/: zh-CN.json
(+3 files in other folders)
